<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="253dp"
        android:layout_marginBottom="92dp"
        android:text="@string/text4"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etname"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_background"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:inputType="text"
                android:padding="8dp"
                android:text="@string/name_signup"
                app:layout_constraintBottom_toTopOf="@+id/etusername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/etusername"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="190dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/email_signup"
                app:layout_constraintBottom_toTopOf="@+id/etpassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="280dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:hint="@string/password_signup"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/etconfirmpassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etconfirmpassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="370dp"
                android:layout_marginBottom="31dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawableTint="@color/app_theme"
                android:ems="10"
                android:hint="@string/confirm_password_signup"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_marginBottom="23dp"
                android:backgroundTint="@color/app_theme"
                android:text="@string/signup"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etconfirmpassword" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text5" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text6"
                    android:textColor="@color/app_theme"
                    android:textColorHint="@color/app_theme" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>